name:                tasty-rerun
version:             1.0.0
synopsis:            Rerun previous test suite runs to run only failing tests
homepage:            http://github.com/ocharles/tasty-rerun
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
copyright:           Oliver Charles (c) 2014
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Test.Tasty.Runners.Rerun
  build-depends:
    base >=4.6 && <4.7,
    containers >= 0.5.0.0,
    mtl >= 2.1.2,
    optparse-applicative >= 0.6,
    reducers >= 3.10.1,
    stm >= 2.4.2,
    tagged >= 0.7 && <0.8,
    tasty >=0.7 && <0.8,
    transformers >= 0.3.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010